--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ xeno_canto_data/
 botw_data/
 CUB_200_2011/
 .idea/
+embeddings/image/image-embeddings.py
+embeddings/audio/ast-embeddings
+embeddings/audio/ast-embeddings.csv
+ssh
